tests/snapshots/errors/type_error_array_element.mc
let arr: array<int> = [1, "hello", 3];
